Fix pix_fmt_info for yuva420.

This allows correct output pix_fmt auto-selection
if the input pix_fmt is yuva420.

Fixes ticket #290.